change rsyslog and bind-secondary

--- a/bind-secondary/templates/named.conf.options.j2
+++ b/bind-secondary/templates/named.conf.options.j2
@@ -45,5 +45,5 @@ logging {
                 print-category yes;
         };
 
-        category default { "default-log"; };
+        category default { "default-log"; "default_syslog"; };
 };
